k8s/prod/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labfactory
  namespace: labfactory
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik-lan
  rules:
    - host: labfactory.emfnet.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: labfactory-dashboard
                port:
                  number: 3000
  tls:
    - hosts:
        - labfactory.emfnet.ch
